add: Show user credentials in navigation header

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -4,6 +4,6 @@
         android:angle="135"
         android:centerColor="#00688b"
         android:endColor="#000000"
-        android:startColor="#00b2ff"
+        android:startColor="@color/nav_gradient_start"
         android:type="linear" />
 </shape>
