--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#00688b"
-        android:endColor="#000000"
+        android:centerColor="@color/nav_gradient_center"
+        android:endColor="@color/nav_gradient_end"
         android:startColor="@color/nav_gradient_start"
         android:type="linear" />
 </shape>
