--- a/app/src/main/res/menu/menu_list_actions.xml
+++ b/app/src/main/res/menu/menu_list_actions.xml
@@ -5,13 +5,15 @@
         android:id="@+id/app_bar_search"
         android:icon="@drawable/ic_search"
         android:title="@string/search"
-        app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="ifRoom" />
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="collapseActionView|ifRoom" />
     <item
+        android:id="@+id/app_bar_filter"
         android:icon="@drawable/ic_filter"
         android:title="@string/filter"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/app_bar_sort"
         android:icon="@drawable/ic_menu_sort"
         android:title="@string/sort"
         app:showAsAction="ifRoom" />
