--- a/app/src/main/res/layout/fragment_meal_board.xml
+++ b/app/src/main/res/layout/fragment_meal_board.xml
@@ -28,10 +28,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_tab_content"
+            <ExpandableListView
+                android:id="@+id/elv_tab_content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent">
+
+            </ExpandableListView>
         </FrameLayout>
     </LinearLayout>
 </TabHost>
