--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,11 +8,15 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-    <dimen name="card_text_size">18sp</dimen>
-    <dimen name="card_height">100dp</dimen>
+
     <dimen name="space_one_unit">8dp</dimen>
     <dimen name="space_two_units">16dp</dimen>
-    <dimen name="nav_header_user_image_side">72dp</dimen>
+    <dimen name="nav_header_user_image_size">72dp</dimen>
     <dimen name="nav_header_user_image_corner">36dp</dimen>
+    <dimen name="card_height">100dp</dimen>
+    <dimen name="card_text_size">18sp</dimen>
     <dimen name="tab_widget_child_width">50dp</dimen>
+    <dimen name="list_item_height">60dp</dimen>
+    <dimen name="list_item_image_size">48dp</dimen>
+    <dimen name="list_button_size">48dp</dimen>
 </resources>
