--- a/app/src/main/res/menu/menu_meal_board.xml
+++ b/app/src/main/res/menu/menu_meal_board.xml
@@ -2,7 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/app_bar_auto_complete"
+        android:icon="@drawable/ic_magic"
+        android:title="@string/action_auto_complete"
+        app:showAsAction="always" />
 </menu>
