--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,10 +13,13 @@
     <dimen name="space_two_units">16dp</dimen>
     <dimen name="nav_header_user_image_size">72dp</dimen>
     <dimen name="nav_header_user_image_corner">36dp</dimen>
-    <dimen name="card_height">100dp</dimen>
-    <dimen name="card_text_size">18sp</dimen>
+    <dimen name="card_height">250dp</dimen>
+    <dimen name="card_image_height">160dp</dimen>
+    <dimen name="card_title_size">16sp</dimen>
+    <dimen name="card_detail_size">12sp</dimen>
     <dimen name="tab_widget_child_width">50dp</dimen>
     <dimen name="list_item_height">60dp</dimen>
     <dimen name="list_item_image_size">48dp</dimen>
     <dimen name="list_button_size">48dp</dimen>
+    <dimen name="card_timer_icon_size">20dp</dimen>
 </resources>
