--- a/app/src/main/res/layout/item_notebook_card.xml
+++ b/app/src/main/res/layout/item_notebook_card.xml
@@ -23,7 +23,7 @@
         <Button
             android:id="@+id/btn_delete"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/list_button_size"
             android:background="@android:color/transparent"
             android:text="@string/delete"
             android:textColor="@color/colorAccent"
@@ -31,7 +31,6 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
-            android:id="@+id/btn_edit"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/list_button_size"
             android:background="@android:color/transparent"
