--- a/app/src/main/res/menu/menu_meal_board.xml
+++ b/app/src/main/res/menu/menu_meal_board.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/app_bar_auto_complete"
         android:icon="@drawable/ic_magic"
-        android:title="@string/action_auto_complete"
+        android:title="@string/auto_complete"
         app:showAsAction="always" />
 </menu>
