--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/group_recipes"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_recipes"
             android:icon="@drawable/ic_menu_recipes"
@@ -14,14 +16,18 @@
             android:title="@string/notebook" />
     </group>
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/group_suggest"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_suggestions"
             android:icon="@drawable/ic_menu_suggest"
             android:title="@string/suggestions" />
     </group>
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/group_weekly"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_meal_board"
             android:icon="@drawable/ic_menu_board"
@@ -32,7 +38,9 @@
             android:title="@string/routines" />
     </group>
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/group_storage"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_food_storage"
             android:icon="@drawable/ic_menu_food"
