--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="nav_gradient_start">#ff80ab</color>
     <color name="nav_gradient_center">#b71c1c</color>
     <color name="nav_gradient_end">#3e2723</color>
+    <color name="selected_card_back">#8d6e63</color>
+    <color name="card_back">#FFFFFF</color>
 </resources>
