--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="windowActionModeOverlay">true</item>
     </style>
 
     <style name="LoginTheme" parent="FirebaseUI">
@@ -53,7 +54,6 @@
         <item name="android:layout_height">@dimen/card_height</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">@dimen/space_one_unit</item>
-        <item name="cardCornerRadius">@dimen/space_one_unit</item>
     </style>
 
     <style name="CardTitle">
@@ -64,16 +64,13 @@
         <item name="android:inputType">textMultiLine</item>
         <item name="android:maxLines">2</item>
         <item name="android:textSize">@dimen/card_title_size</item>
-        <item name="android:layout_marginStart">@dimen/space_one_unit</item>
-        <item name="android:layout_marginEnd">@dimen/space_one_unit</item>
-        <item name="android:layout_marginTop">@dimen/space_two_units</item>
-        <item name="android:layout_marginBottom">@dimen/space_two_units</item>
+        <item name="android:layout_margin">@dimen/space_one_unit</item>
     </style>
 
     <style name="CardCookTime">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">center_horizontal|end</item>
+        <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textSize">@dimen/card_detail_size</item>
         <item name="android:layout_marginStart">@dimen/space_one_unit</item>
         <item name="android:layout_marginEnd">@dimen/space_one_unit</item>
