--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,4 +82,12 @@
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
+    <!--suppress AndroidDomInspection -->
+    <style name="RecipeEditTexts" parent="Base.V7.Widget.AppCompat.EditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:inputType">textCapWords</item>
+        <item name="android:singleLine">true</item>
+    </style>
 </resources>
