--- a/app/src/main/res/layout/fragment_overall.xml
+++ b/app/src/main/res/layout/fragment_overall.xml
@@ -4,24 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="@dimen/activity_vertical_margin"
-    android:layout_marginEnd="@dimen/activity_horizontal_margin"
-    android:layout_marginStart="@dimen/activity_horizontal_margin"
-    android:layout_marginTop="@dimen/activity_vertical_margin"
     tools:context=".fragments.RecipesFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <FrameLayout
-            android:id="@+id/frame_empty"
-            android:layout_width="@dimen/card_image_height"
-            android:layout_height="@dimen/card_image_height"
-            android:background="@android:color/white"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_title"
+            android:layout_width="@dimen/recipe_title_input_width"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <EditText
+                android:id="@+id/text_edit_title"
+                style="@style/RecipeEditTexts"
+                android:hint="@string/recipe_title"
+                android:imeOptions="actionNext" />
+        </android.support.design.widget.TextInputLayout>
+
+        <FrameLayout
+            android:id="@+id/frame_empty"
+            android:layout_width="@dimen/edit_image_size"
+            android:layout_height="@dimen/edit_image_size"
+            android:background="@android:color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/input_layout_title">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/empty_frame_outline_thickness"
+                android:background="@android:color/white" />
+        </FrameLayout>
 
         <ImageView
             android:id="@+id/iv_photo_icon"
@@ -40,8 +60,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/space_one_unit"
-            android:layout_marginEnd="@dimen/space_one_unit"
-            android:layout_marginStart="@dimen/space_one_unit"
             android:text="@string/click_to_add_a_picture"
             android:textSize="@dimen/text_size_new_recipe"
             app:layout_constraintBottom_toBottomOf="@+id/frame_empty"
@@ -50,60 +68,79 @@
 
         <ImageView
             android:id="@+id/iv_recipe_picture"
-            android:layout_width="@dimen/card_image_height"
-            android:layout_height="@dimen/card_image_height"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_width="@dimen/edit_image_size"
+            android:layout_height="@dimen/edit_image_size"
             android:contentDescription="@string/recipe_image_description"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/frame_empty" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_rotate"
             android:layout_width="@dimen/list_button_size"
             android:layout_height="@dimen/list_button_size"
             android:layout_marginStart="@dimen/space_one_unit"
-            android:background="@android:drawable/ic_menu_rotate"
-            app:layout_constraintStart_toEndOf="@+id/iv_recipe_picture"
-            app:layout_constraintTop_toTopOf="@+id/iv_recipe_picture" />
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/rotate_image"
+            android:src="@android:drawable/ic_menu_rotate"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_recipe_picture"
+            app:layout_constraintStart_toEndOf="@+id/iv_recipe_picture" />
+
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_width="@dimen/list_button_size"
+            android:layout_height="@dimen/list_button_size"
+            android:layout_marginStart="@dimen/space_one_unit"
+            android:background="@android:color/transparent"
+            android:text="@string/save"
+            app:layout_constraintBottom_toTopOf="@+id/btn_rotate"
+            app:layout_constraintStart_toEndOf="@+id/iv_recipe_picture" />
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_title"
-            android:layout_width="match_parent"
+            android:id="@+id/input_layout_course"
+            android:layout_width="@dimen/recipe_title_input_width"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_recipe_picture">
 
-            <EditText
-                android:id="@+id/text_edit_title"
+            <AutoCompleteTextView
+                android:id="@+id/text_edit_course"
                 style="@style/RecipeEditTexts"
-                android:hint="@string/recipe_title"
+                android:hint="@string/course"
                 android:imeOptions="actionNext" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_course"
-            android:layout_width="match_parent"
+            android:id="@+id/input_layout_cuisine"
+            android:layout_width="@dimen/recipe_title_input_width"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_layout_title">
+            app:layout_constraintTop_toBottomOf="@+id/input_layout_course">
+            <AutoCompleteTextView
+                android:id="@+id/text_edit_cuisine"
+                style="@style/RecipeEditTexts"
+                android:hint="@string/cuisine"
+                android:imeOptions="actionNext" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_language"
+            android:layout_width="@dimen/recipe_title_input_width"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/input_layout_cuisine">
 
             <AutoCompleteTextView
-                android:id="@+id/text_edit_course"
+                android:id="@+id/text_edit_language"
                 style="@style/RecipeEditTexts"
-                android:hint="@string/recipe_title"
+                android:hint="@string/language"
                 android:imeOptions="actionNext" />
         </android.support.design.widget.TextInputLayout>
 
