--- a/app/src/main/res/menu/menu_recipes.xml
+++ b/app/src/main/res/menu/menu_recipes.xml
@@ -11,10 +11,10 @@
         android:id="@+id/app_bar_filter"
         android:icon="@drawable/ic_filter"
         android:title="@string/filter"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/app_bar_sort"
         android:icon="@drawable/ic_menu_sort"
         android:title="@string/sort"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
